# blackboxv8

./: .gitignore  ANALIZA_BLACKBOXV8.md  LICENSE  README.md  RELEASES.md  SAMPL.T64  SAPI5_NEXT_SESSION.md  __init__.py  blackbox.py  blackbox_core.py  blackbox_nvda.py  blackbox_rom.py  blackbox_runtime.py  blackbox_v8_driver.py  manifest.ini  package_addon.py  repack.py  synthDriver.py
BLACKBOXV8/: BLACKBOXV8.CRT  parms.txt
android/: README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  blackbox_android_jni.cpp
android/app/src/main/java/com/turek/blackbox/android/: BlackBoxEngine.kt  BlackBoxPreferences.kt  BlackBoxSettingsActivity.kt  BlackBoxTtsService.kt  CheckVoiceDataActivity.kt  DictionaryRepository.kt  EmojiAnnotationsRepository.kt  InstallTtsDataActivity.kt  NativeBlackBox.kt  SampleTextActivity.kt  SpeechTextNormalizer.kt
android/app/src/main/res/layout/: activity_settings.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: tts_engine.xml
android/app/src/test/java/com/turek/blackbox/android/: SpeechTextNormalizerTest.java
cpp_core/: CMakeLists.txt
cpp_core/include/blackbox/: nvda_api.h  prosody.hpp  sam_like.hpp  text.hpp
cpp_core/src/: nvda_api.cpp  prosody.cpp  sam_like.cpp  sam_stub.c  text.cpp
installer/: blackbox_sapi5.iss  blackbox_sapi5_x64.iss
sapi5/: CMakeLists.txt  Directory.Build.props
sapi5/config/: blackbox_sapi5_config.cpp
sapi5/engine/: blackbox_sapi5.cpp  blackbox_sapi5.def
sapi5/runtime/: blackbox_sapi_bridge.py
tests/: test_blackbox_core.py  test_blackbox_nvda_driver.py  test_blackbox_rom.py
tools/: analyze_ref.py  build_sapi5_installer.ps1  check_voices.ps1  compare_metrics.py  metrics_fresh.py  publish_github.ps1  render_speech_samples.py  rom_command_probe.py  rom_command_scan.py  rom_command_sequence.py  rom_inventory.py  rom_map.py  rom_ramtrace.py  rom_recon.py  rom_sid_probe.py  sapi5_ab_tuning.ps1  sapi5_cmp_numbers.ps1  sapi5_debug_nums.ps1  sapi5_env_check.ps1  sapi5_focus_test.ps1  sapi5_mode_test.ps1  sapi5_modes_new.ps1  sapi5_modes_new_reload.ps1  sapi5_numbers_test.ps1  sapi5_regression_x64.ps1  sapi5_regression_x86.ps1  sapi5_slow_focus.ps1  sapi5_slow_focus_v2.ps1  sapi5_speak_x64.ps1  sapi5_speak_x86.ps1  sapi5_tuned_eval.ps1  sapi5_voice_diagnose.ps1  vsdevcmd_x64.cmd
